--- a/books/templates/base.html
+++ b/books/templates/base.html
@@ -8,6 +8,16 @@
   <title>Books</title>
 </head>
 <body>
+  <h1>All Books</h1>
+  <nav>
+    {% if user.is_authenticated %}
+    <p>Hello, {{user.username}}!</p>
+    <a href="{% url 'auth_logout'%}">Logout</a>
+    {%else%}
+    <a href="{% url 'auth_login'%}">Login</a>
+    {%endif%}
+  </nav>
+
   <div>
     {% block content %}
     {% endblock %}
