--- a/books/templates/books/list_books.html
+++ b/books/templates/books/list_books.html
@@ -2,7 +2,15 @@
 
 {% block content %}
 <!-- this is where we rend album -->
-<h1>All Books</h1>
+<!-- ???  -->
+<!-- {% if messages %}
+<div class="messages ba br2 b--silver bg-washed-green pa2">
+  {% for message in messages %}
+  <p{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</p>
+    {% endfor %}
+</div>
+{% endif %} -->
+<!-- ???  -->
 
 <div>
     {% for book in books %}
